Fixed URL for the app & added link to readme file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://marko-krznar.github.io/React-Library/",
+	"homepage": "https://marko-krznar.github.io/React-Football-Results/",
 	"name": "england-championship",
 	"version": "0.1.0",
 	"private": true,
